--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11,3 +11,89 @@ li {
 a {
   text-decoration: none;
 }
+
+.container-header {
+  height: 130px;
+  padding: 0 270px;
+  color: #0282f9;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.container-header ul {
+  display: flex;
+}
+
+.container-header li {
+  margin-left: 30px;
+}
+.container-header li:hover {
+  border-bottom: solid 3px #0282f9;
+  margin-top: -3px;
+}
+.container-header li a {
+  color: black;
+}
+.container-header li i {
+  color: #0282f9;
+}
+.container-header li input {
+  border: none;
+  text-align: end;
+  margin-right: 10px;
+  width: 75px;
+}
+
+footer {
+  color: #797979;
+}
+
+.container-footer-top {
+  padding: 0 180px;
+  background-image: url("../../../public/images/footer-bg.jpg");
+  background-color: black;
+  height: 400px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.container-footer-top aside {
+  display: inline-block;
+}
+.container-footer-top aside .list {
+  margin-right: 30px;
+  display: flex;
+}
+.container-footer-top aside .list li {
+  width: calc(100% / 3);
+}
+.container-footer-top aside .list li h3 {
+  color: #ffffff;
+  margin-bottom: 10px;
+}
+.container-footer-top aside p {
+  margin-top: 80px;
+}
+
+.container-footer-bottom {
+  padding: 0 180px;
+  height: 120px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #303030;
+}
+.container-footer-bottom aside ul {
+  display: flex;
+}
+.container-footer-bottom aside ul li {
+  margin-left: 13px;
+}
+.container-footer-bottom aside button {
+  background-color: transparent;
+  border: 2px solid #0282f9;
+  color: white;
+  font-size: 23px;
+}
