--- a/resources/sass/partials/footer.scss
+++ b/resources/sass/partials/footer.scss
@@ -3,7 +3,7 @@ footer {
 }
 .container-footer-top {
     padding: 0  180px;
-    background-image: url('../../../public/images/footer-bg.jpg');
+    background-image: url('../images/footer-bg.jpg');
     background-color: black;
     height: 400px;
     width: 100%;
