--- a/resources/sass/partials/jumbo.scss
+++ b/resources/sass/partials/jumbo.scss
@@ -1,5 +1,5 @@
 .container-jumbo{
-    background-image: url('../../../public/images/jumbotron.jpg');
+    background-image: url('../images/jumbotron.jpg');
     height: 400px;
     width: 100%;
     position: relative;
@@ -7,7 +7,7 @@
         position: absolute;
         left: 300px;
         bottom: 0;
-        transform: translate(-50%, -50%);
+        transform: translate(-50%, 50%);
         background-color: $dc_blue;
         color: $white;
         font: 23px;
